--- a/pom.xml
+++ b/pom.xml
@@ -56,5 +56,18 @@
         <module>zico-web</module>
         <module>zico-dist</module>
     </modules>
-
+	<build>
+    	<plugins>
+    		<plugin>
+    			<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-compiler-plugin</artifactId>
+    			<version>${compiler.plugin.version}</version>
+    			<configuration>
+                  <source>1.6</source>
+                  <target>1.6</target>
+                  <encoding>UTF-8</encoding>
+              </configuration>
+    		</plugin>
+    	</plugins>
+    </build>
 </project>
