--- a/zico-web/pom.xml
+++ b/zico-web/pom.xml
@@ -69,7 +69,7 @@
         <dependency>
             <groupId>com.jitlogic.zorka</groupId>
             <artifactId>zorka-common-test</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.11</version>
             <scope>test</scope>
         </dependency>
         <dependency>
